--- a/Example Modul.ipynb
+++ b/Example Modul.ipynb
@@ -104,9 +104,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'a' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# Operasi Modulus (%)\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m hasil \u001b[39m=\u001b[39m a \u001b[39m%\u001b[39m b\n\u001b[0;32m      3\u001b[0m \u001b[39mprint\u001b[39m(a,\u001b[39m'\u001b[39m\u001b[39m%\u001b[39m\u001b[39m'\u001b[39m,b,\u001b[39m'\u001b[39m\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m,hasil)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'a' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Operasi Modulus (%)\n",
     "hasil = a % b\n",
@@ -146,9 +158,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 ** 2 * 4 + 3 / 2 - 2 % 4 // 3 = 31.5\n"
+     ]
+    }
+   ],
    "source": [
     "x = 3\n",
     "y = 2\n",
@@ -160,9 +180,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 + 2 * 4 = 11\n",
+      "( 3 + 2 ) * 4 = 20\n"
+     ]
+    }
+   ],
    "source": [
     "hasil = x + y * z\n",
     "print(x,'+',y,'*',z,'=',hasil)\n",
@@ -306,9 +335,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'a' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# Tidak sama dengan (!=)\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m hasil \u001b[39m=\u001b[39m a \u001b[39m!=\u001b[39m \u001b[39m4\u001b[39m\n\u001b[0;32m      3\u001b[0m \u001b[39mprint\u001b[39m(a,\u001b[39m'\u001b[39m\u001b[39m!=\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m4\u001b[39m,\u001b[39m'\u001b[39m\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m,hasil)\n\u001b[0;32m      5\u001b[0m hasil \u001b[39m=\u001b[39m b \u001b[39m!=\u001b[39m \u001b[39m4\u001b[39m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'a' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Tidak sama dengan (!=)\n",
     "hasil = a != 4\n",
@@ -392,9 +433,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "nilai b = 10\n",
+      "nilai b %= 3, nilai b menjadi 1\n",
+      "\n",
+      "nilai b = 10\n",
+      "nilai b //= 3, nilai b menjadi 3\n"
+     ]
+    }
+   ],
    "source": [
     "# modulus\n",
     "b = 10\n",
@@ -586,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1208,9 +1262,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ini adalah kalimat kedua.a.\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Ini adalah kalimat pertama.\\rIni adalah kalimat kedua.\")"
    ]
@@ -1267,7 +1329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4
  },
